@@ -77,6 +77,30 @@ this repository contains the full copyright notices and license terms. -->
         <menuitem parent="account_invoice.menu_invoices" id="menu_landed_cost"
             sequence="50" action="act_landed_cost_form"/>
 
+        <record model="ir.action.act_window" id="act_landed_cost_form_shipment">
+            <field name="name">Landed Costs</field>
+            <field name="res_model">account.landed_cost</field>
+            <field
+                name="domain"
+                eval="[If(Eval('active_ids', []) == [Eval('active_id')], ('shipments', '=', Eval('active_id')), ('shipments', 'in', Eval('active_ids')))]"
+                pyson="1"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_landed_cost_form_shipment_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="landed_cost_view_list"/>
+            <field name="act_window" ref="act_landed_cost_form_shipment"/>
+        </record>
+        <record model="ir.action.act_window.view" id="act_landed_cost_form_shipment_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="landed_cost_view_form"/>
+            <field name="act_window" ref="act_landed_cost_form_shipment"/>
+        </record>
+        <record model="ir.action.keyword" id="act_landed_cost_form_shipment_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">stock.shipment.in,-1</field>
+            <field name="action" ref="act_landed_cost_form_shipment"/>
+        </record>
+
         <record model="ir.model.access" id="access_landed_cost">
             <field name="model" search="[('model', '=', 'account.landed_cost')]"/>
             <field name="perm_read" eval="False"/>
