@@ -1,3 +1,4 @@
+* Add landed cost relate from supplier shipment
 * Rename landed cost state from cancel to cancelled
 
 Version 5.6.0 - 2020-05-04
